a2a/1.1/modules/ROOT/pages/a2a-connector-acb.adoc
= Using Anypoint Code Builder to Configure {connector-name} Connector {version}
:exchange-search-name: a2a
:connector-name: A2A
:version: 1.1
:lc-connector-name: a2a
:studio-connector-name: A2A


include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-connector-config-intro"]

== Create a New Integration Project

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-create-integration-project"]

== Add the Connector to Your Integration Project

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-add-connector-to-project"]

== Configure the Source For the Flow

A source (trigger) starts the flow when specified conditions are met. You can configure these sources for {connector-name} Connector:

* *A2A Server - Authorization Listener*
+
A2A Server authorization listener that gates JSON-RPC methods which don't have a dedicated listener. If the flow completes successfully, the request is authorized. If the flow raises an error, the request is denied and a `403 Forbidden` response is returned to the caller. 

* *A2A Server - Task Listener*
+
Listens for and receives incoming A2A protocol-compliant requests from other AI agents, enabling the Mule-based agent to act as an A2A server and respond to tasks.
+
* *A2A Server - On Task Stream Listener*
+
Server-side listener for streaming task requests. Activates when clients send streaming requests to trigger server-side flows and enable real-time SSE event delivery. Use this source in conjunction with *A2A Server - Task Listener*.
+
* *A2A Server - On Push Notification Set Listener*
+
Validates the push notification configuration before routing the request to the *A2A Server - Task Listener* source.

For example, to configure an *A2A Server - Task Listener* source, follow these steps:

. Click the *Task Listener* component on the canvas.
. (Optional) Click the edit icon to change the name of the *Task Listener* component. 
. In the *General* tab, configure the connection for the A2A Server. See xref:a2a-connector-reference.adoc#Server[A2A Server Configuration].
. Select the *Advanced* tab to configure these attributes:
+
[%header%autowidth.spread]
|===
| Attribute | Description | Required
| Primary node only | Select this option to execute the *Task Listener* source on the primary node only when running in a cluster. | No
| Redelivery policy | Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow. | No
| Reconnection strategy | Retry strategy in case of connectivity errors. When an operation in a Mule application fails to connect to an external server, the default behavior is for the operation to fail immediately and return a connectivity error. You can modify the default behavior by configuring the reconnection strategy for the operation. | No
| Response | The response payload to return. Defaults to `#[payload]`. | No
| Response Headers | HTTP response headers to include with the response. | No
|===

== Add Components to Your Project

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-add-components-to-project"]

== Configure the Component Attributes

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-configure-attributes"]

== Create a New Configuration XML File

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-create-config-file-acb"]

[[debug]]
== Debug the App

Debug your Mule application using the embedded debugger in Anypoint Code Builder.

See xref:anypoint-code-builder::int-debug-mule-apps.adoc[].

== See Also

include::connectors::partial$configure-acb-connectors-partial.adoc[tag="acb-template-see-also"]
* xref:runtime-manager::deployment-strategies.adoc[]
